@@ -23,4 +23,5 @@ Thanks to:
     Sergey Ilinyh who improved the D-Bus support
     Frank Ren who improved the save dialog
     Embarembar who added the lithuanian translation
+    Frank Ren who updated the traditional chinese translation
 
